--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     select, button, input { margin: 0.5rem 0; padding: 0.5rem; font-size: 1rem; }
     .clue { margin: 1rem 0; font-weight: bold; }
     .result { font-size: 1.2rem; margin-top: 1rem; }
+  @keyframes fadeIn {
+      to { opacity: 1; }
+    }
   </style>
 </head>
 <body>
@@ -49,9 +52,16 @@
     <input type="text" id="guess" placeholder="Your guess..." />
     <button onclick="checkGuess()">Submit Guess</button>
     <div class="result" id="result"></div>
+    <div id="animal-image" style="margin-top: 1rem;"></div>
+    <div id="stats" style="margin-top: 0.5rem; font-style: italic;"></div>
+    <button id="play-again" onclick="startGame()" style="display:none; margin-top: 1rem;">🔁 Play Again</button>
   </div>
 
   <script>
+    let selectedAnimal = null;
+    let currentClueIndex = 0;
+    let guessCount = 0;
+    let startTime = 0;
     const animals = [
   {
     name: "Cheetah",
@@ -248,14 +258,17 @@
       "I am known for my speed.",
       "People often associate me with agility."
     ]
-  }
-
+    }
+];
 
     function startGame() {
+      document.getElementById('play-again').style.display = 'none';
       const difficulty = document.getElementById('difficulty').value;
       const habitat = document.getElementById('habitat').value;
       const size = document.getElementById('size').value;
 
+      guessCount = 0;
+      startTime = Date.now();
       let filtered = animals.filter(a => a.difficulty === difficulty);
       if (habitat !== 'any') filtered = filtered.filter(a => a.habitat === habitat);
       if (size !== 'any') filtered = filtered.filter(a => a.size === size);
@@ -269,22 +282,32 @@
       currentClueIndex = 0;
 
       document.getElementById('game').style.display = 'block';
+      document.getElementById('animal-image').innerHTML = '';
       document.getElementById('result').textContent = '';
-      document.getElementById('clue').textContent = selectedAnimal.clues[currentClueIndex];
+      document.getElementById('clue').innerHTML = `🧩 Clue #${currentClueIndex + 1}: <span style="opacity: 0; display: inline-block; animation: fadeIn 0.6s forwards;">${selectedAnimal.clues[currentClueIndex]}</span>`;
     }
 
     function checkGuess() {
+      guessCount++;
       const guess = document.getElementById('guess').value.trim().toLowerCase();
       if (guess === selectedAnimal.name.toLowerCase()) {
         document.getElementById('result').textContent = `🎉 Correct! The animal was ${selectedAnimal.name}.`;
         document.getElementById('game').style.display = 'none';
+        document.getElementById('play-again').style.display = 'inline-block';
+        const timeTaken = Math.round((Date.now() - startTime) / 1000);
+        document.getElementById('stats').textContent = `⏱️ Time: ${timeTaken}s | 🧠 Guesses: ${guessCount}`;
+        document.getElementById('animal-image').innerHTML = `<img src='https://source.unsplash.com/400x300/?${encodeURIComponent(selectedAnimal.name)}' alt='${selectedAnimal.name}' style='max-width: 100%; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.2); margin-top: 1rem;'>`;
       } else {
         currentClueIndex++;
         if (currentClueIndex >= selectedAnimal.clues.length) {
           document.getElementById('result').textContent = `😢 Out of clues! The animal was ${selectedAnimal.name}.`;
           document.getElementById('game').style.display = 'none';
+        document.getElementById('play-again').style.display = 'inline-block';
+        const timeTaken = Math.round((Date.now() - startTime) / 1000);
+        document.getElementById('stats').textContent = `⏱️ Time: ${timeTaken}s | 🧠 Guesses: ${guessCount}`;
+        document.getElementById('animal-image').innerHTML = `<img src='https://source.unsplash.com/400x300/?${encodeURIComponent(selectedAnimal.name)}' alt='${selectedAnimal.name}' style='max-width: 100%; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.2); margin-top: 1rem;'>`;
         } else {
-          document.getElementById('clue').textContent = selectedAnimal.clues[currentClueIndex];
+          document.getElementById('clue').innerHTML = `🧩 Clue #${currentClueIndex + 1}: <span style="opacity: 0; display: inline-block; animation: fadeIn 0.6s forwards;">${selectedAnimal.clues[currentClueIndex]}</span>`;
         }
       }
     }
