--- a/index.html
+++ b/index.html
@@ -842,7 +842,7 @@
         document.getElementById('result').textContent = `⏰ Time's up! The animal was ${selectedAnimal.name}.`;
         document.getElementById('game').style.display = 'none';
         document.getElementById('play-again').style.display = 'inline-block';
-        document.getElementById('animal-image').innerHTML = `<img src='https://source.unsplash.com/400x300/?${encodeURIComponent(selectedAnimal.name)}' alt='${selectedAnimal.name}' style='max-width: 100%; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.2); margin-top: 1rem;'>`; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.2); margin-top: 1rem;'>`;
+        document.getElementById('animal-image').innerHTML = `<img src='https://source.unsplash.com/400x300/?${encodeURIComponent(selectedAnimal.name)}' alt='${selectedAnimal.name}' style='max-width: 100%; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.2); margin-top: 1rem;'>`;
         }
       }, 1000);
       document.getElementById('play-again').style.display = 'none';
