--- a/index.html
+++ b/index.html
@@ -874,6 +874,22 @@
     }
 
     function checkGuess() {
+      if (window.progressInterval) clearInterval(window.progressInterval);
+      const progressBar = document.getElementById('progress-bar');
+      let timeLeft = 20;
+      progressBar.style.width = '100%';
+      window.progressInterval = setInterval(() => {
+        timeLeft--;
+        progressBar.style.width = (timeLeft * 5) + '%';
+        if (timeLeft <= 0) {
+          clearInterval(window.progressInterval);
+          if (!selectedAnimal) return;
+          document.getElementById('result').textContent = `⏰ Time's up! The animal was ${selectedAnimal.name}.`;
+          document.getElementById('game').style.display = 'none';
+          document.getElementById('play-again').style.display = 'inline-block';
+          document.getElementById('animal-image').innerHTML = `<img src='https://source.unsplash.com/400x300/?${encodeURIComponent(selectedAnimal.name)}' alt='${selectedAnimal.name}' style='max-width: 100%; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.2); margin-top: 1rem;'>`;
+        }
+      }, 1000);
       guessCount++;
       const guess = document.getElementById('guess').value.trim().toLowerCase();
       if (guess === selectedAnimal.name.toLowerCase()) {
