--- a/index.html
+++ b/index.html
@@ -20,17 +20,37 @@
       margin-top: 1rem;
     }
     #progress-bar {
+      animation: pulseReset 0.5s ease;
+      transition: width 0.5s linear, background-color 0.3s ease;
       width: 100%;
       height: 10px;
       background-color: #4caf50;
       transition: width 0.5s linear;
     }
-  </style>
+  @keyframes pulseReset {
+      0% { transform: scaleX(1); background-color: #2196f3; }
+      50% { transform: scaleX(1.05); background-color: #64b5f6; }
+      100% { transform: scaleX(1); background-color: #4caf50; }
+    }
+  @keyframes confetti {
+  0% { transform: translateY(0); opacity: 1; }
+  100% { transform: translateY(300px); opacity: 0; }
+}
+.confetti-piece {
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  background-color: red;
+  animation: confetti 2s ease-out forwards;
+  border-radius: 2px;
+}
+
 <audio id="correctSound" src="https://actions.google.com/sounds/v1/cartoon/clang_and_wobble.ogg" preload="auto"></audio>
 <audio id="wrongSound" src="https://actions.google.com/sounds/v1/cartoon/cartoon_boing.ogg" preload="auto"></audio>
 <audio id="correctSound" src="https://actions.google.com/sounds/v1/cartoon/clang_and_wobble.ogg" preload="auto"></audio>
 <audio id="wrongSound" src="https://actions.google.com/sounds/v1/cartoon/cartoon_boing.ogg" preload="auto"></audio>
 <audio id="bgm" src="https://cdn.pixabay.com/download/audio/2022/10/17/audio_5787b9ba21.mp3?filename=fantasy-game-loop-114055.mp3" preload="auto" loop autoplay></audio>
+<audio id="confettiSound" src="https://actions.google.com/sounds/v1/alarms/beep_short.ogg" preload="auto"></audio>
 </head>
 <body>
   <h1>🎮 Animal Guessing Game</h1>
@@ -833,6 +853,9 @@
       const progressBar = document.getElementById('progress-bar');
       let timeLeft = 20; // 20 seconds to play
       progressBar.style.width = '100%';
+      progressBar.style.animation = 'none';
+      progressBar.offsetHeight;
+      progressBar.style.animation = 'pulseReset 0.5s ease';
       window.progressInterval = setInterval(() => {
         timeLeft--;
         progressBar.style.width = (timeLeft * 5) + '%';
@@ -843,6 +866,7 @@
         document.getElementById('game').style.display = 'none';
         document.getElementById('play-again').style.display = 'inline-block';
         document.getElementById('animal-image').innerHTML = `<img src='https://source.unsplash.com/400x300/?${encodeURIComponent(selectedAnimal.name)}' alt='${selectedAnimal.name}' style='max-width: 100%; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.2); margin-top: 1rem;'>`;
+        launchConfetti();
         }
       }, 1000);
       document.getElementById('play-again').style.display = 'none';
@@ -952,7 +976,23 @@
     }
 
     renderScoreboard();
+function launchConfetti() {
+  document.getElementById('confettiSound').play();
+  const container = document.getElementById('confetti-container');
+  for (let i = 0; i < 50; i++) {
+    const confetti = document.createElement('div');
+    confetti.className = 'confetti-piece';
+    confetti.style.left = Math.random() * window.innerWidth + 'px';
+    confetti.style.top = '-10px';
+    confetti.style.backgroundColor = `hsl(${Math.random() * 360}, 70%, 60%)`;
+    confetti.style.animationDelay = `${Math.random()}s`;
+    confetti.style.transform = `rotate(${Math.random() * 360}deg)`;
+    container.appendChild(confetti);
+    setTimeout(() => confetti.remove(), 2000);
+  }
+}
 </script>
 <div id="scoreboard" style="margin-top: 2rem; font-size: 0.9rem; color: #444;"></div>
+<div id="confetti-container" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none; z-index: 999;"></div>
 </body>
 </html>
