--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
   border-radius: 2px;
 }
 
+
 <audio id="correctSound" src="https://actions.google.com/sounds/v1/cartoon/clang_and_wobble.ogg" preload="auto"></audio>
 <audio id="wrongSound" src="https://actions.google.com/sounds/v1/cartoon/cartoon_boing.ogg" preload="auto"></audio>
-
 <audio id="bgm" src="https://cdn.pixabay.com/download/audio/2022/10/17/audio_5787b9ba21.mp3?filename=fantasy-game-loop-114055.mp3" preload="auto" loop autoplay></audio>
 <audio id="confettiSound" src="https://actions.google.com/sounds/v1/alarms/beep_short.ogg" preload="auto"></audio>
 </head>
@@ -289,11 +289,11 @@
     habitat: "plains",
     size: "medium",
     clues: [
-      "I am a small animal.",
-      "I typically live in jungles.",
+      "I am a medium-sized animal.",
+      "I typically live in plains.",
       "My diet consists of plants.",
-      "I am known for my intelligence.",
-      "People often associate me with cuteness."
+      "I am known for hopping.",
+      "People often associate me with Australia."
     ]
   }
 ,
